# exdb_data

./: .gitignore  README.md  TODOS.md  Taskfile.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
data/equipment/: barbell.yml  bench.yml  dip_belt.yml  dumbbell.yml  kettlebell.yml  lat-pulldown-machine.yml  rack.yml  sandbag.yml  smith-machine.yml
data/exercises/: 00000_bb_bench_press.yml  00000_bench_press.yml  00001_high_bar_squat.yml  00002_conventional_deadlift.yml  00003_standing_bb_overhead_press.yml  00004_bb_front_squat.yml  00005_bb_overhead_squat.yml  00006_bb_lunge.yml  00007_weighted_dip.yml  00008_snatch.yml  00009_bb_clean.yml  00009_clean.yml  00010_weighted_chin_up.yml  00011_bb_bulgarian_split_squat.yml  00012_bb_incline_bench_press.yml  00013_bb_seated_ohp.yml  00014_bb_power_snatch.yml  00015_bb_hang_snatch.yml  00016_bb_row.yml  00017_bb_pause_squat.yml  00018_bb_romanian_deadlift.yml  00019_bb_sumo_deadlift.yml  00020_bb_push_press.yml  00021_bb_power_clean.yml  00022_split_jerk.yml  00023_bb_clean_and_jerk.yml  00024_bb_hang_clean.yml  00025_bb_squat_jump.yml  00026_bb_snatch_pull.yml  00027_bb_clean_pull.yml  00028_bb_snatch_balance.yml  00029_bb_curl.yml  00030_bb_lying_tricep_extension.yml  00030_bb_lying_triceps_extension.yml  00031_bb_standing_tricep_extension.yml  00031_bb_standing_triceps_extension.yml  00032_bb_shrug.yml  00033_bb_decline_bench_press.yml  00034_bb_close_grip_bench_press.yml  00035_bb_upright_row.yml  (+25 more)
data/ontology/: exercise-ontology.owx
src/exdb_data/: __init__.py  (+3 more)
(+2 files in other folders)
